added Word Guess game

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,10 +47,11 @@
         <div class="card-deck text-center">
 
           <div class="card md-col-2">
-            <img class="card-img-top" src="assets/images/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Hangman</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h5 class="card-title">Word Guess Game</h5>
+              <p class="card-text">Guess the characters from Super Mario</p>
+              <a href="https://rchlblns.github.io/WordGuessGame/" class="btn btn-primary">Check it out</a>
             </div>
           </div>
 
