added screenshot of Word Guess game

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         <div class="card-deck text-center">
 
           <div class="card md-col-2">
-            <img class="card-img-top" src="" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/wordguess.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Word Guess Game</h5>
               <p class="card-text">Guess the characters from Super Mario</p>
