added info for Crystal Collector

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         <div class="card-deck text-center">
 
           <div class="card md-col-2">
-            <img class="card-img-top" src="assets/images/wordguess.png" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/wordguess.png" alt="Preview of Word Guess Game">
             <div class="card-body">
               <h5 class="card-title">Word Guess Game</h5>
               <p class="card-text">Guess the characters from Super Mario</p>
@@ -56,10 +56,11 @@
           </div>
 
           <div class="card md-col-2">
-            <img class="card-img-top" src="assets/images/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/crystalcollector.png" alt="Preview of Crystal Collector">
             <div class="card-body">
-              <h5 class="card-title">RPG Game</h5>
-              <p class="card-text">Nunc mattis enim ut tellus elementum sagittis vitae. Id donec ultrices tincidunt arcu non sodales.</p>
+              <h5 class="card-title">Crystal Collector</h5>
+              <p class="card-text"><p>For this assignment, I was tasked to create an interactive game where the HTML is dynamically updated using jQuery.</p>
+              <a href="https://rchlblns.github.io/unit-4-game/" class="btn btn-primary">Check it out</a>
             </div>
           </div>
 
