added Trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <div class="jumbotron text-center bg-white">
         <div class="container">
           <h1 class="display-3">My Portfolio</h1>
-          <p class="lead"> - Projects I've worked on - </p>
+          <p class="lead"> - Apps I've Created - </p>
         </div>
     </div>
 
@@ -65,10 +65,11 @@
           </div>
 
           <div class="card md-col-2">
-            <img class="card-img-top" src="assets/images/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/hptriviagame.png" alt="Preview of Trivia Game">
             <div class="card-body">
               <h5 class="card-title">Trivia Game</h5>
-              <p class="card-text">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Vulputate enim nulla aliquet porttitor lacus.</p>
+              <p class="card-text">How well do you know the wizarding world?</p>
+              <a href="https://rchlblns.github.io/TriviaGame/" class="btn btn-primary">Check it out</a>
             </div>
           </div>
           
