added Giftastic to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,19 @@
             <img class="card-img-top" src="assets/images/hptriviagame.png" alt="Preview of Trivia Game">
             <div class="card-body">
               <h5 class="card-title">Trivia Game</h5>
-              <p class="card-text">How well do you know the wizarding world?</p>
+              <p class="card-text">How well do you know the wizarding world? Test your knowledge in this trivia game.</p>
               <a href="https://rchlblns.github.io/TriviaGame/" class="btn btn-primary">Check it out</a>
             </div>
           </div>
           
+          <div class="card md-col-2">
+              <img class="card-img-top" src="assets/images/giftastic.png" alt="Preview of Giftastic">
+              <div class="card-body">
+                <h5 class="card-title">Giftastic</h5>
+                <p class="card-text">Gifs are great, especially if they're dog related! This assignment fetches dog related gifs using GIPHY's API.</p>
+              </div>
+          </div>
+
           <div class="card md-col-2">
             <img class="card-img-top" src="assets/images/placeholder.png" alt="Card image cap">
             <div class="card-body">
