added link for Giftastic

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <div class="card-body">
               <h5 class="card-title">Word Guess Game</h5>
               <p class="card-text">Guess the characters from Super Mario</p>
-              <a href="https://rchlblns.github.io/WordGuessGame/" class="btn btn-primary">Check it out</a>
+              <a href="https://rchlblns.github.io/WordGuessGame/" class="btn btn-outline-dark">Check it out</a>
             </div>
           </div>
 
@@ -60,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Crystal Collector</h5>
               <p class="card-text"><p>For this assignment, I was tasked to create an interactive game where the HTML is dynamically updated using jQuery.</p>
-              <a href="https://rchlblns.github.io/unit-4-game/" class="btn btn-primary">Check it out</a>
+              <a href="https://rchlblns.github.io/unit-4-game/" class="btn btn-outline-dark">Check it out</a>
             </div>
           </div>
 
@@ -69,7 +69,7 @@
             <div class="card-body">
               <h5 class="card-title">Trivia Game</h5>
               <p class="card-text">How well do you know the wizarding world? Test your knowledge in this trivia game.</p>
-              <a href="https://rchlblns.github.io/TriviaGame/" class="btn btn-primary">Check it out</a>
+              <a href="https://rchlblns.github.io/TriviaGame/" class="btn btn-outline-dark">Check it out</a>
             </div>
           </div>
           
@@ -78,9 +78,10 @@
               <div class="card-body">
                 <h5 class="card-title">Giftastic</h5>
                 <p class="card-text">Gifs are great, especially if they're dog related! This assignment fetches dog related gifs using GIPHY's API.</p>
+                <a href="https://rchlblns.github.io/GifTastic/" class="btn btn-outline-dark">Check it out</a>
               </div>
           </div>
-
+          
           <div class="card md-col-2">
             <img class="card-img-top" src="assets/images/placeholder.png" alt="Card image cap">
             <div class="card-body">
